--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -15,7 +15,9 @@
         android:layout_height="fill_parent"
         android:layout_above="@+id/suitField"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:maxLines="500"
+        android:scrollbars="vertical" />
 
     <Button
         android:id="@+id/addButton"
