--- a/res/layout-land/activity_main_menu.xml
+++ b/res/layout-land/activity_main_menu.xml
@@ -12,7 +12,8 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/hello_world"
+         />
 
     <Button
         android:id="@+id/button1"
@@ -20,6 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:text="Game" />
+        android:text="Start Game" />
 
 </RelativeLayout>
