Updated the GUI

--- a/res/layout-land/activity_main_menu.xml
+++ b/res/layout-land/activity_main_menu.xml
@@ -10,17 +10,27 @@
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:textSize="30sp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-         />
+        android:gravity="center_horizontal"
+        android:layout_marginTop="75dp"
+        android:text="@string/mainTitle" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:text="Start Game" />
+        android:layout_centerHorizontal="true"
+        android:text="@string/startGame" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:text="@string/goToInstructions" />
 
 </RelativeLayout>
