--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -15,22 +15,24 @@
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:maxLines="500"
+        android:maxLines="17"
         android:scrollbars="vertical" />
 
     <LinearLayout
         android:id="@+id/playerHand"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignLeft="@layout/activity_game" >
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp" >
 
         <Button
             android:id="@+id/button0"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_margin="0dp" />
 
         <Button
             android:id="@+id/button1"
