--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -9,15 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Game" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:maxLines="17"
-        android:scrollbars="vertical" />
-
     <LinearLayout
         android:id="@+id/playerHand"
         android:layout_width="wrap_content"
@@ -27,7 +18,7 @@
         android:layout_marginRight="50dp" >
 
         <Button
-            android:id="@+id/button0"
+            android:id="@+id/playerTile0"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -35,16 +26,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button1"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginLeft="-2dp"
-            android:layout_marginRight="-2dp" />
-
-        <Button
-            android:id="@+id/button2"
+            android:id="@+id/playerTile1"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -53,7 +35,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/playerTile2"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -62,7 +44,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/playerTile3"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -71,7 +53,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/playerTile4"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -80,7 +62,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/playerTile5"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -89,7 +71,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/playerTile6"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -98,7 +80,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button8"
+            android:id="@+id/playerTile7"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -107,7 +89,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/playerTile8"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -116,7 +98,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button10"
+            android:id="@+id/playerTile9"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -125,7 +107,7 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button11"
+            android:id="@+id/playerTile10"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -134,7 +116,16 @@
             android:layout_marginRight="-2dp" />
 
         <Button
-            android:id="@+id/button12"
+            android:id="@+id/playerTile11"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="-2dp"
+            android:layout_marginRight="-2dp" />
+
+        <Button
+            android:id="@+id/playerTile12"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -143,7 +134,7 @@
             android:layout_marginRight="4dp" />
 
         <Button
-            android:id="@+id/button13"
+            android:id="@+id/playerTileTemp"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -160,5 +151,14 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="" />
+
+    <LinearLayout
+        android:id="@+id/botHand1"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal" >
+
+    </LinearLayout>
 
 </RelativeLayout>
