--- a/res/layout-land/activity_game.xml
+++ b/res/layout-land/activity_game.xml
@@ -16,7 +16,9 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="25dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp" >
+        android:layout_marginRight="50dp"
+        android:background="@color/light_gray"
+        android:padding="1dp" >
 
         <Button
             android:id="@+id/playerTile0"
